--- a/Frontend/LoginRegisterExample/app/src/main/res/values/colors.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/values/colors.xml
@@ -22,4 +22,6 @@
     <color name="btn_login_bg">#eceef1</color>
     <color name="lbl_name">#333333</color>
     <color name="btn_logut_bg">#ff6861</color>
+    <color name="iconText">#e4f9f5</color>
+    <color name="background">#11999e</color>
 </resources>
