--- a/Frontend/LoginRegisterExample/app/src/main/res/drawable/border_layout.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/drawable/border_layout.xml
@@ -4,7 +4,7 @@
         android:start="2dp"
         android:end="2dp"
         android:top="2dp"
-        android:bootom="2dp">
+        android:bottom="2dp">
         <shape android:shape="rectangle">
 
             <stroke android:width="2dp"
