--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/activity_List.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/activity_List.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".ListActivity"
     >
 
     <LinearLayout
@@ -26,7 +26,7 @@
             android:layout_height="50dp"
             app:itemIconTint="@drawable/menu_select_color"
             app:itemTextColor="@drawable/menu_select_color"
-            app:menu="@menu/bottom_navigation" />
+            app:menu="@menu/menu_top" />
 
         <FrameLayout
             android:id="@+id/Main_Frame"
