--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/activity_List.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/activity_List.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListActivity"
-    >
+    tools:ignore="MissingDefaultResource">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="1"
-        >
+        android:weightSum="1">
+
         <androidx.appcompat.widget.SearchView
             android:id="@+id/search_view"
             android:layout_width="match_parent"
@@ -20,8 +20,9 @@
             app:iconifiedByDefault="false"
             app:queryHint="역이름 검색"
             tools:ignore="MissingConstraints" />
+
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavi"
+            android:id="@+id/topNavi"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             app:itemIconTint="@drawable/menu_select_color"
@@ -32,10 +33,11 @@
             android:id="@+id/Main_Frame"
             android:layout_width="match_parent"
             android:layout_height="633dp"
-            app:layout_constraintBottom_toTopOf="@+id/bottomNavi"
+            app:layout_constraintBottom_toTopOf="@+id/topNavi"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"></FrameLayout>
+            app:layout_constraintTop_toTopOf="parent"/>
+
     </LinearLayout>
 </RelativeLayout>
