--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/playcategory.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/playcategory.xml
@@ -9,7 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:text="play fragment"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:gravity="center"
         tools:ignore="MissingConstraints" />
 
