회원가입 페이지 수정 및 기능 추가

--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/signup.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/signup.xml
@@ -44,20 +44,7 @@
             android:paddingRight="20dp">
 
 
-            <EditText
-                android:id="@+id/et_id"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/edit_round"
-                android:drawableLeft="@drawable/icons8_name_35"
-                android:hint=" 이 름"
-                android:inputType="textCapWords"
-                android:padding="10dp"
-                android:textColor="@color/input_register"
-                android:textColorHint="@color/input_register_hint"
-                android:fontFamily="@font/nanumbarunpenb"
-                />
+
 
             <EditText
                 android:id="@+id/et_nickname"
@@ -67,7 +54,32 @@
                 android:background="@drawable/edit_round"
                 android:drawableLeft="@drawable/icons8_name_tag_35"
                 android:hint=" 닉 네 임"
+                android:ems="10"
                 android:inputType="textEmailAddress"
+                android:padding="10dp"
+                android:textColor="@color/input_register"
+                android:textColorHint="@color/input_register_hint"
+                android:fontFamily="@font/nanumbarunpenb"
+
+                />
+<!--            <Button-->
+<!--                android:id="@+id/check_btn"-->
+<!--                style ="@style/defaultButton"-->
+
+<!--                >-->
+
+<!--            </Button>-->
+
+
+            <EditText
+                android:id="@+id/et_name"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/edit_round"
+                android:drawableLeft="@drawable/icons8_name_35"
+                android:hint=" 이 름"
+                android:inputType="textCapWords"
                 android:padding="10dp"
                 android:textColor="@color/input_register"
                 android:textColorHint="@color/input_register_hint"
@@ -125,7 +137,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dip"
-                android:background="#ea4c88"
+                android:background="#FFD0D6"
                 android:text=" 회 원 가 입 "
                 android:textColor="@color/white" />
 
