S03P31A304 Gunho: fix foodcategory

--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/foodcategory.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/foodcategory.xml
@@ -1,16 +1,31 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:columnCount="4">
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:text="food category"
-        android:textColor="#000000"
-        android:gravity="center" />
+    <ImageButton
+        android:id="@+id/pizza"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/pizza_icon" />
 
+    <ImageButton
+        android:id="@+id/pizza2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/pizza_icon" />
 
+    <ImageButton
+        android:id="@+id/cola"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/c" />
 
-</LinearLayout>
+    <ImageButton
+        android:id="@+id/egg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/e" />
+
+</GridLayout>
