--- a/Frontend/LoginRegisterExample/app/src/main/res/values/colors.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/values/colors.xml
@@ -24,4 +24,5 @@
     <color name="btn_logut_bg">#ff6861</color>
     <color name="iconText">#e4f9f5</color>
     <color name="background">#11999e</color>
+    <color name="colorGray">#8C8C8C</color>
 </resources>
