--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/activity_subway.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/activity_subway.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="1">
-        <androidx.appcompat.widget.SearchView
+    <TextView
+        android:id="@+id/gestureStatusText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+        <!--<androidx.appcompat.widget.SearchView
             android:id="@+id/search_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -36,13 +39,5 @@
             android:id="@+id/photoView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.9" />
-        <!--<com.github.chrisbanes.photoview.PhotoView
-            android:id="@+id/photoView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_weight="0.9"
-            tools:ignore="MissingConstraints" />-->
-    </LinearLayout>
-</RelativeLayout>
+            android:layout_weight="0.9" />-->
+</LinearLayout>
