--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/foodcategory.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/foodcategory.xml
@@ -6,12 +6,48 @@
     android:orientation="horizontal"
     android:columnCount="4">
 
+
+    <Button
+        android:id="@+id/지역명물"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:text="지역 명물 image"
+        android:layout_rowSpan="2"
+        android:layout_columnSpan="4" />
+
+    <Button
+        android:id="@+id/like1_button"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:text="#취향1"
+        android:layout_rowSpan="1"
+        android:layout_columnSpan="1"
+        android:background="@drawable/likely_design"/>
+
+    <Button
+        android:id="@+id/like2_button"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:text="#취향2"
+        android:layout_rowSpan="1"
+        android:layout_columnSpan="1"
+        android:background="@drawable/likely_design"/>
+
+    <Button
+        android:id="@+id/like3_button"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:text="#취향3"
+        android:layout_rowSpan="1"
+        android:layout_columnSpan="2"
+        android:background="@drawable/likely_design"/>
+
     <ImageButton
         android:id="@+id/pizza"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:scaleType="fitXY"
-        android:src="@drawable/pizza_icon"
+        android:src="@drawable/pizza_icon_text"
         android:background="@android:color/transparent"/>
 
     <ImageButton
@@ -37,5 +73,102 @@
         android:scaleType="fitXY"
         android:src="@drawable/e"
         android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/pizza3"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/pizza_icon"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/pizza4"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/pizza_icon"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/cola2"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/c"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/egg2"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/e"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/pizza5"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/pizza_icon"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/pizza6"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/pizza_icon"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/cola3"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/c"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/egg3"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/e"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/pizza7"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/pizza_icon"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/pizza8"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/pizza_icon"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/cola4"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/c"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/egg4"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/e"
+        android:background="@android:color/transparent"/>
+
 
 </GridLayout>
