--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/activity_subway.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/activity_subway.xml
@@ -4,40 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
-    <TextView
-        android:id="@+id/gestureStatusText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-        <!--<androidx.appcompat.widget.SearchView
+        <androidx.appcompat.widget.SearchView
             android:id="@+id/search_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:iconifiedByDefault="false"
             app:queryHint="검색어를 입력하시오"
             tools:ignore="MissingConstraints"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="2dp"
-            android:layout_weight="0.05"/>
+            tools:layout_editor_absoluteY="2dp"/>
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/what_subway"
+            android:background="@drawable/what_subway"
+            android:src="@drawable/image_border"
             tools:ignore="MissingConstraints"
-            android:layout_below="@id/search_view"
-            android:layout_centerHorizontal="true"
             tools:layout_editor_absoluteX="54dp"
-            tools:layout_editor_absoluteY="87dp"
-            android:layout_weight="0.05"/>
-        <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
+            tools:layout_editor_absoluteY="87dp"/>
+        <!--<com.github.chrisbanes.photoview.PhotoView
+            android:id="@+id/photoView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>-->
+        <com.example.loginregisterexample.SubsamplingScaleImageView
             android:id="@+id/photoView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.9" />-->
+            android:layout_height="match_parent"/>
 </LinearLayout>
