--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/signup.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/signup.xml
@@ -68,7 +68,7 @@
 
                 <Button
                     android:id="@+id/check_button"
-                    android:layout_width="126dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
