--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/playwithme_likely.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/playwithme_likely.xml
@@ -58,7 +58,7 @@
                     android:layout_height="fill_parent"
                     android:background="@android:color/transparent"
                     android:text="먹거리"
-                    android:textColor="@color/purple_700"/>
+                    android:textColor="@color/main_color"/>
 
             </LinearLayout>
 
@@ -117,7 +117,7 @@
                     android:layout_height="fill_parent"
                     android:background="@android:color/transparent"
                     android:text="놀거리"
-                    android:textColor="@color/purple_700"/>
+                    android:textColor="@color/main_color"/>
 
             </LinearLayout>
 
@@ -187,7 +187,7 @@
                     android:layout_height="fill_parent"
                     android:background="@android:color/transparent"
                     android:text="먹거리"
-                    android:textColor="@color/purple_700"/>
+                    android:textColor="@color/main_color"/>
 
             </LinearLayout>
 
@@ -246,7 +246,7 @@
                     android:layout_height="fill_parent"
                     android:background="@android:color/transparent"
                     android:text="놀거리"
-                    android:textColor="@color/purple_700"/>
+                    android:textColor="@color/main_color"/>
 
             </LinearLayout>
 
