--- a/Frontend/LoginRegisterExample/app/src/main/res/values/colors.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="red">#FF0000</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="main_color">#FFD0D6</color>
     <color name="purple_700">#FF3700B3</color>
