--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/playwithme.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/playwithme.xml
@@ -79,7 +79,7 @@
                     android:layout_marginRight="25dp"
                     android:layout_weight="1"/>
 
-                <EditText
+                <AutoCompleteTextView
                     android:id="@+id/et_choice_station"
                     android:layout_width="200dp"
                     android:layout_height="fill_parent"
@@ -90,7 +90,6 @@
                     android:textColor="@color/input_register"
                     android:textColorHint="@color/input_register_hint"
                     android:layout_weight="1"/>
-
             </LinearLayout>
 
             <LinearLayout
