--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/activity_main.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/main_frame"
-    >
+    android:id="@+id/main_frame">
 
 
 
@@ -25,10 +24,7 @@
 
         app:itemIconTint="@color/iconText"
         app:itemTextColor="@color/iconText"
-        app:menu="@menu/menu_bottom"
-
-
-        >
+        app:menu="@menu/menu_bottom">
 
 
 
