--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/main_category_list.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/main_category_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:orientation="vertical">
 <!--    <Button
@@ -11,8 +11,8 @@
     <ImageView
         android:id="@+id/item_imageview1"
         android:padding="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:adjustViewBounds="true"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
@@ -21,8 +21,8 @@
     <ImageView
         android:id="@+id/item_imageview2"
         android:padding="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:adjustViewBounds="true"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
