--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/playwithme.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/playwithme.xml
@@ -115,7 +115,7 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/btn_login"
+                    android:id="@+id/btn_playwith_me"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="250dip"
