--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/categorylist_activity.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/categorylist_activity.xml
@@ -33,7 +33,7 @@
             android:gravity="center"
             android:id="@+id/categoryPlayButton"
             android:clickable="true"
-            android:text="볼거리"
+            android:text="놀거리"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:layout_weight="1">
