Juho - Login/ Register

--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/activity_signup.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/activity_signup.xml
@@ -8,7 +8,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginBottom="?attr/actionBarSize"
         >
         <!--  어떻게 하면 Layout끼리 겹치지 않게 할 수 있을까?-->
 
@@ -30,11 +29,12 @@
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
             android:paddingLeft="20dp"
+            android:paddingTop="30dp"
             android:paddingRight="20dp">
 
 
@@ -49,8 +49,7 @@
                 android:inputType="textCapWords"
                 android:padding="10dp"
                 android:textColor="@color/input_register"
-                android:textColorHint="@color/input_register_hint"
-                />
+                android:textColorHint="@color/input_register_hint" />
 
             <EditText
                 android:id="@+id/et_pass"
@@ -83,30 +82,7 @@
                 android:text="@string/btn_register"
                 android:textColor="@color/white" />
 
-            <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/et_findPassword"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:padding="10dp"
-                    android:text="@string/hint_find_password1"
-                    android:textColor="@color/black" />
-
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:gravity="right"
-                    android:linksClickable="true"
-                    android:padding="10dp"
-                    android:text="@string/hint_find_password2"
-                    android:textColor="@color/black" />
-                <!-- 링크 클링    -->
-            </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
 
