--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/main_category_list.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/main_category_list.xml
@@ -18,6 +18,14 @@
         android:clickable="true"
         android:gravity="center"
         android:layout_weight="1"/>
+
+    <TextView
+        android:id="@+id/item_textview1"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="20dp" />
+
     <ImageView
         android:id="@+id/item_imageview2"
         android:padding="10dp"
@@ -28,4 +36,11 @@
         android:clickable="true"
         android:gravity="center"
         android:layout_weight="1"/>
+    <TextView
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/item_textview2"
+        android:gravity="center"
+        android:textSize="20dp"
+        />
 </LinearLayout>
